fix: footer in dark mode, simplify switch

--- a/frontend/src/assets/styles/base/_base.scss
+++ b/frontend/src/assets/styles/base/_base.scss
@@ -1,7 +1,7 @@
-// Defensive CSS Reset 
-// https://defensivecss.dev/articles/intro-defensive-css/ 
+// Defensive CSS Reset
+// https://defensivecss.dev/articles/intro-defensive-css/
 
-// [1] Break words when there is enough space 
+// [1] Break words when there is enough space
 h1,
 h2,
 h3,
@@ -11,7 +11,7 @@ h6,
 p,
 a {
     overflow-wrap: break-word;
-    // [1] 
+    // [1]
 }
 
 
@@ -19,12 +19,12 @@ a {
 //[2] Let the image cover its bounding box to avoid distortion.
 img {
     max-width: 100%;
-    // [1] 
+    // [1]
     object-fit: cover;
-    // [2] 
+    // [2]
 }
 
-// Set default text styles 
+// Set default text styles
 body {
     font-family: "Inter", sans-serif;
     font-size: 1rem;
@@ -61,7 +61,7 @@ h6 {
     margin-top: 24px;
 }
 
-// Header + Navbar 
+// Header + Navbar
 header {
     background-color: var(--header);
     display: flex;
@@ -73,9 +73,8 @@ header {
     z-index: 10;
 }
 
-// Links 
+// Links
 a {
-    color: var(--main--nabyblue);
     text-decoration: none;
 }
 
